<resources>
    <string name="app_name">Android Sketch</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- CardView-->
    <string name="action_add_car">Add to order</string>

    <!-- Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="drawer_title_1">Restaurante</string>
    <string name="drawer_title_2">Info</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_menu">Menú</string>
    <string name="nav_sales">Promociones</string>
    <string name="nav_more">Más...</string>
    <string name="nav_about_us">Acerca de</string>
    <string name="nav_contact_us">Contactanos</string>
    <string name="nav_help">Ayuda</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Menú</item>
        <item>Promociones</item>
        <item>Más...</item>
    </string-array>

    <string name="activity_title_about_us">Acerca de nosotros</string>
    <string name="activity_title_contact_us">Contactanos</string>
    <string name="activity_title_help">Ayuda</string>

    <string name="action_mark_all_read">Marcar todos leido</string>

    <!-- Slider Intro -->
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

</resources>
