<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_menu"
                android:icon="@drawable/ic_home_black_24dp"
                android:title="@string/nav_menu" />
        <item
                android:id="@+id/nav_sales"
                android:icon="@drawable/ic_photo_library_black_24dp"
                android:title="@string/nav_sales" />
        <item
                android:id="@+id/nav_more"
                android:icon="@drawable/ic_local_movies_black_24dp"
                android:title="@string/nav_more" />

    </group>

    <item android:title="Other">
        <menu>
            <item
                    android:id="@+id/nav_about_us"
                    android:title="@string/nav_about_us" />
            <item
                    android:id="@+id/nav_contact_us"
                    android:title="@string/nav_contact_us" />
            <item
                    android:id="@+id/nav_help"
                    android:title="@string/nav_help" />
        </menu>
    </item>

</menu>
